--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+.factorypath
+/.claude
+/.settings
+CLAUDE.md
+deploy.bat
